# hashiwokakero

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
database/: difficulty_map.json
docs/: backlog.md  phase1_solver.md  phase2_cathegoriser.md  phase3_restructure.md
hashi/: __init__.py  __main__.py  alternative.py  arg_parser.py  book.py  cathegorise.py  cli.py  core.py  dataset_production.py  difficulty_map.json  difficulty_mapper.py  export.py  formats.py  generator.py  node.py  pdf_alternative.py  pdf_out.py  production.py  render.py  solver.py  visualiser.py
hashi/categorize/: __init__.py  categorize.py  mapper.py
hashi/data/: difficulty_map.json
hashi/testdata/: puzzle_0.csv  puzzle_2.csv
python3/: export.py  solver.py
python3/puzzles/: puzzle_4.csv  puzzle_5.csv  puzzle_9.csv
src/cpp/: Makefile
src/python3/: export.py  generator.py  grid_visualizer.py  node.py  pdf_out.py  solver.py  ui_elements.py  visualiser.py
tests/: conftest.py  context.py  hashi_test.py  test_solver.py
tests/basic_puzzles/: puzzle_3.csv
tests/difficult_puzzles/: puzzle_6.csv
tests/fixtures/basic/: test.csv
tests/fixtures/difficult/: puzzle_0.csv  puzzle_1.csv  puzzle_2.csv  puzzle_7.csv  puzzle_8.csv
tests/fixtures/testdata/: puzzle_1.csv  puzzle_3.csv  puzzle_4.csv  puzzle_5.csv  puzzle_6.csv  puzzle_7.csv
